syntax = "proto3";

package protobuf;

option go_package = "protobuf/";

enum Operation {
  WRITE = 0;
  READ = 1;
  DELETE = 2;
  JOIN_CONF_ADD = 3;
  JOIN_CONF_DEL = 4;
  NODE_UPDATED = 5;
  NODE_DELETED = 6;
  CREATE = 7;
  RENAME = 8;
}

message logEntry {
	uint64 Term=1;
	string Description=2;
	Operation OpType=3;
  string FilenName=4;
  bytes Payload=5;
}



